--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js" type="text/javascript"></script>
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css" type="text/css">
     <!-- Compiled and minified JavaScript -->
@@ -18,6 +20,8 @@
     <link rel="icon" type="image/png" href="favicon_16x16.png">
   </head>
   <body>
+
+
     <div class="container" id="menu">
       <div class="row" id="options">
         <div class="col s12">
@@ -62,10 +66,6 @@
                   </div>
                   <br>
                 </li>
-                <li>
-                  Logs
-                  <a class="indigo waves-effect waves-light btn" id="logs-button">Logs</a>
-                </li>
               </ul>
             </div>
           </li>
@@ -89,13 +89,7 @@
         </div>
     </div>
 
-    <div id="logs-panel">
-      <div class="card white">
-        <div class="card-content black-text">
-          <b>Logs</b>
-        </div>
-      </div>
-    </div>
+    
 
     <div id="map"></div>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
