--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
             </div>
           </div>
         </div>
-    </div>
-
-    
+    </div>    
 
     <div id="map"></div>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.js"></script>
+    <!--<script src="https://raw.githubusercontent.com/caolan/async/master/dist/async.min.map"></script>-->
     <script type="text/javascript" src="config/userdata.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
